// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Message Decorator should add metadata 1`] = `
{
  "fields": [],
  "generated": [],
  "hooks": [],
  "message": {
    "decorator": "Message",
    "name": "MessageDecoratorMessage",
    "namespace": null,
    "target": [Function],
    "topic": null,
  },
  "priority": undefined,
  "schema": undefined,
  "topic": undefined,
}
`;

exports[`Message Decorator should add metadata with options 1`] = `
{
  "fields": [],
  "generated": [],
  "hooks": [],
  "message": {
    "decorator": "Message",
    "name": "name",
    "namespace": "namespace",
    "target": [Function],
    "topic": "topic",
  },
  "priority": undefined,
  "schema": undefined,
  "topic": undefined,
}
`;
